# adocker

./: .gitmodules  CLAUDE.md  CODE_STYLE_FIX.md  LICENSE  MIRROR_TEST_RESULTS.md  QR_CODE_SCANNING.md  README.en.md  README.md  REGISTRY_MIRRORS.md  SESSION_SUMMARY.md  TEST_RESULTS.md  TODO.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.json
app/: build.gradle.kts
app/src/androidTest/java/adocker/app/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/adocker/runner/: BasicFunctionalityTest.kt  HiltTestRunner.kt  ImagePullAndRunTest.kt  RegistryMirrorConnectivityTest.kt  SimpleImagePullTest.kt
app/src/androidTest/java/com/adocker/runner/ui/: ContainersScreenTest.kt  HomeScreenTest.kt  ImagesScreenTest.kt  MirrorSettingsScreenTest.kt  SettingsScreenTest.kt
app/src/androidTest/java/com/github/adocker/: BasicFunctionalityTest.kt  HiltTestRunner.kt  ImagePullAndRunTest.kt  RegistryMirrorConnectivityTest.kt  SimpleImagePullTest.kt
app/src/androidTest/java/com/github/adocker/ui/: ContainersScreenTest.kt  HomeScreenTest.kt  ImagesScreenTest.kt  MirrorSettingsScreenTest.kt  SettingsScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/adocker/app/: MainActivity.kt
app/src/main/java/com/adocker/runner/: ADockerApplication.kt  MainActivity.kt
app/src/main/java/com/adocker/runner/core/config/: AppConfig.kt  Config.kt  RegistrySettings.kt  RegistrySettingsManager.kt
app/src/main/java/com/adocker/runner/core/di/: AppModule.kt
app/src/main/java/com/adocker/runner/core/logging/: AndroidLogger.kt  AndroidLoggerFactory.kt  AndroidServiceProvider.kt  TimberLogger.kt  TimberLoggerFactory.kt  TimberServiceProvider.kt
app/src/main/java/com/adocker/runner/core/startup/: ConfigInitializer.kt  RegistrySettingsInitializer.kt  TimberInitializer.kt
app/src/main/java/com/adocker/runner/core/utils/: FileUtils.kt  PhantomProcessManager.kt  ProcessUtils.kt
app/src/main/java/com/adocker/runner/ui/: MainScreen.kt
app/src/main/java/com/github/adocker/: ADockerApplication.kt  MainActivity.kt
app/src/main/java/com/github/adocker/ui/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/github/andock/: AndockApplication.kt
app/src/main/java/com/github/andock/ui/: MainActivity.kt
app/src/main/res/animator/: docker_scale.xml  robot_scale.xml
app/src/main/res/drawable/: android_cropped.xml  docker_cropped.xml  ic_launcher_animated.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v32/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/adocker/app/: ExampleUnitTest.kt
common/: build.gradle.kts
common/src/androidTest/java/com/github/andock/common/: ExampleInstrumentedTest.kt
common/src/main/java/com/github/andock/common/: Context.kt  LocalServerSocket.kt  SuspendLazy.kt  Timing.kt  Utils.kt
common/src/test/java/com/github/andock/common/: ExampleUnitTest.kt
daemon/: build.gradle.kts
daemon/src/androidTest/java/com/github/adocker/daemon/: AlpineImagePullAndRunTest.kt  ExampleInstrumentedTest.kt  HiltTestRunner.kt
daemon/src/androidTest/java/com/github/andock/daemon/: AlpineImagePullAndRunTest.kt  HiltTestRunner.kt
daemon/src/main/: AndroidManifest.xml
daemon/src/main/res/values/: values.xml
daemon/src/test/java/com/github/adocker/daemon/: ExampleUnitTest.kt
daemon/src/test/java/com/github/andock/daemon/: ExampleUnitTest.kt
gpu/: .gitignore  VIRGL_API_REFERENCE.md  VIRGL_ARCHITECTURE.md  VIRGL_VTEST_SERVER_GUIDE.md  build.gradle.kts
gpu/src/androidTest/java/com/github/andock/gpu/: ExampleInstrumentedTest.kt
gpu/src/main/cpp/: CMakeLists.txt  VirGLNative.cpp  virgl_callbacks.cpp  virgl_callbacks.h  virgl_context.h  virgl_egl_manager.cpp  virgl_egl_manager.h  virgl_init.cpp  virgl_init.h  virgl_jni.cpp  virgl_jni_utils.h  vtest_client.cpp  vtest_client.h  vtest_epoll_server.cpp  vtest_epoll_server.h  vtest_io.cpp  vtest_io.h  vtest_protocol.h
gpu/src/main/cpp/scripts/: android-cross.txt.in  build-epoxy.sh  build-virglrenderer.sh
gpu/src/main/java/com/github/andock/gpu/: NativeLib.kt
gpu/src/test/java/com/github/andock/gpu/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ksp/: build.gradle.kts
ksp/src/main/java/com/github/andock/ksp/: AppTaskProcessor.kt  MyClass.kt  RouteProcessor.kt
patch/: build.gradle.kts
proot/: build.gradle.kts
proot/src/androidTest/java/com/github/andock/proot/: ExampleInstrumentedTest.kt
proot/src/main/cpp/: CMakeLists.txt  ext.c  ext.cpp
proot/src/main/cpp/scripts/: build-proot.sh  build-talloc.sh  filter-output.sh  install
proot/src/main/java/com/github/andock/proot/: PRoot.kt
proot/src/test/java/com/github/andock/proot/: ExampleUnitTest.kt
route-ksp/src/main/java/com/github/andock/ksp/: RouteProcessor.kt
scripts/: filter-output.sh  pkg-config
startup/: build.gradle.kts
startup/src/androidTest/java/com/github/andock/startup/: ExampleInstrumentedTest.kt
startup/src/main/: AndroidManifest.xml
startup/src/main/java/com/github/andock/startup/: AndroidXTrigger.kt  CombinedContext.kt  ContextElementInterceptor.kt  ContinuationInterceptorInterceptor.kt  DispatcherType.kt  EventLoopMainCoroutineDispatcher.kt  ExtraDispatchers.kt  Initializer.kt  Internal.kt  InternalName.kt  RedirectDispatchers.kt  RootCoroutineContext.kt  Scoped.kt  Startup.kt  StartupCombinedContext.kt  StartupCoroutineContext.kt  StartupEntryPoint.kt  StartupModule.kt  StartupRootContext.kt  Stats.kt  SuspendInitializer.kt  SuspendLazy.kt  Task.kt  TaskBatch.kt  TaskBatchFactory.kt  TaskCompute.kt  TaskComputeTime.kt  TaskDispatchers.kt  TaskInfo.kt  TaskName.kt  TaskResult.kt  TimeMillisWithResult.kt  Timing.kt  Trigger.kt
startup/src/test/java/com/github/andock/startup/: ExampleUnitTest.kt
stub/: build.gradle.kts
stub/src/main/java/android/app/: ActivityThread.java  Application.java
stub/src/main/java/java/net/: UnixDomainSocketAddress.java
(+1124 files in other folders)
